--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </header>
             <div class="container">
                  <div class="hero-pic">
-                    <img src="images/myPIC3.jpg" alt="profile pic">
+                    <img src="myPIC3.jpg" alt="profile pic">
                  </div>
                  <div class="hero-text">
                     <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
